--- a/styles/root.scss
+++ b/styles/root.scss
@@ -22,9 +22,9 @@
 	--button-border: rgba(204, 204, 204, 0.4);
 	--send-button: rgba(38, 135, 183, 0.23);
 
-	--label: #333;
+	--label: #292929;
 	--label-code: #3b3b3b;
-	--label-light: #333;
+	--label-light: #292929;
 	--label-dark: #f8f8f8;
 	--secondary-label: #79797c;
 	--secondary-label-dark: #9999a0;
@@ -33,8 +33,8 @@
 	--input-background: #eeeeee;
 	--inverse-label: #f8f8f8;
 	--search-field: #fff;
-	--link: #13a463;
-	--link-hover: #108b54;
+	--link: #0e8650;
+	--link-hover: #0e8650;
 
 	--separator: #ccc; // #dee2e6?
 	--medium-separator: #dfdfdf;
@@ -211,10 +211,10 @@
 		--control-label: #eee;
 		--text-field: #212122;
 		--input-background: rgba(0, 0, 0, 0.2);
-		--inverse-label: #333;
+		--inverse-label: #292929;
 		--search-field: #2b2b2c;
 		--link: #0aa567;
-		--link-hover: #0b955e;
+		--link-hover: #0aa567;
 
 		--separator: #3a3a3c;
 		--medium-separator: #3a3a3c;
